docs/api/qiskit/0.29/qiskit.ignis.verification.CNOTDihedral.md
---
title: CNOTDihedral
description: API reference for qiskit.ignis.verification.CNOTDihedral
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.ignis.verification.CNOTDihedral
---

# CNOTDihedral

<span id="qiskit.ignis.verification.CNOTDihedral" />

`CNOTDihedral(data, validate=True)` [GitHub](https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.6/qiskit/ignis/verification/randomized_benchmarking/dihedral.py "view source code")

Bases: `qiskit.quantum_info.operators.base_operator.BaseOperator`

CNOT-dihedral Object Class. The CNOT-dihedral group on num\_qubits qubits is generated by the gates CNOT, T and X.

**References**

1.  Shelly Garion and Andrew W. Cross, *On the structure of the CNOT-Dihedral group*, [arXiv:2006.12042 \[quant-ph\]](https://arxiv.org/abs/2006.12042)
2.  Andrew W. Cross, Easwar Magesan, Lev S. Bishop, John A. Smolin and Jay M. Gambetta, *Scalable randomised benchmarking of non-Clifford gates*, npj Quantum Inf 2, 16012 (2016).

Initialize a CNOTDihedral operator object.

## Methods

### adjoint

<span id="qiskit.ignis.verification.CNOTDihedral.adjoint" />

`CNOTDihedral.adjoint()` [GitHub](https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.6/qiskit/ignis/verification/randomized_benchmarking/dihedral.py "view source code")

Return the conjugate transpose of the CNOTDihedral element

### cnot

<span id="qiskit.ignis.verification.CNOTDihedral.cnot" />

`CNOTDihedral.cnot(i, j)` [GitHub](https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.6/qiskit/ignis/verification/randomized_benchmarking/dihedral.py "view source code")

Apply a CNOT gate to this element. Left multiply the element by CNOT\_\{i,j}.

### compose

<span id="qiskit.ignis.verification.CNOTDihedral.compose" />

`CNOTDihedral.compose(other, qargs=None, front=False)` [GitHub](https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.6/qiskit/ignis/verification/randomized_benchmarking/dihedral.py "view source code")

Return the composed operator.

**Parameters**

*   **other** ([*CNOTDihedral*](qiskit.ignis.verification.CNOTDihedral "qiskit.ignis.verification.CNOTDihedral")) – an operator object.
*   **qargs** (*None*) – using specific qargs is not implemented for this operator.
*   **front** (*bool*) – if True compose using right operator multiplication, instead of left multiplication \[default: False].

**Returns**

The operator self @ other.

**Return type**

[CNOTDihedral](qiskit.ignis.verification.CNOTDihedral "qiskit.ignis.verification.CNOTDihedral")

**Raises**

*   **QiskitError** – if operators have incompatible dimensions for composition.
*   **NotImplementedError** – if qargs is not None.

#### Additional Information:

Composition (`@`) is defined as left matrix multiplication for matrix operators. That is that `A @ B` is equal to `B * A`. Setting `front=True` returns right matrix multiplication `A * B` and is equivalent to the [`dot()`](qiskit.ignis.verification.CNOTDihedral#dot "qiskit.ignis.verification.CNOTDihedral.dot") method.

### conjugate

<span id="qiskit.ignis.verification.CNOTDihedral.conjugate" />

`CNOTDihedral.conjugate()` [GitHub](https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.6/qiskit/ignis/verification/randomized_benchmarking/dihedral.py "view source code")

Return the conjugate of the CNOTDihedral element.

### copy

<span id="qiskit.ignis.verification.CNOTDihedral.copy" />

`CNOTDihedral.copy()`

Make a deep copy of current operator.

### dot

<span id="qiskit.ignis.verification.CNOTDihedral.dot" />

`CNOTDihedral.dot(other, qargs=None)` [GitHub](https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.6/qiskit/ignis/verification/randomized_benchmarking/dihedral.py "view source code")

Return the right multiplied operator self \* other.

**Parameters**

*   **other** ([*CNOTDihedral*](qiskit.ignis.verification.CNOTDihedral "qiskit.ignis.verification.CNOTDihedral")) – an operator object.
*   **qargs** (*None*) – using specific qargs is not implemented for this operator.

**Returns**

The operator self \* other.

**Return type**

[CNOTDihedral](qiskit.ignis.verification.CNOTDihedral "qiskit.ignis.verification.CNOTDihedral")

**Raises**

*   **QiskitError** – if operators have incompatible dimensions for composition.
*   **NotImplementedError** – if qargs is not None.

### expand

<span id="qiskit.ignis.verification.CNOTDihedral.expand" />

`CNOTDihedral.expand(other)` [GitHub](https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.6/qiskit/ignis/verification/randomized_benchmarking/dihedral.py "view source code")

Return the tensor product operator: other tensor self.

**Parameters**

**other** ([*CNOTDihedral*](qiskit.ignis.verification.CNOTDihedral "qiskit.ignis.verification.CNOTDihedral")) – an operator subclass object.

**Returns**

the tensor product operator: other tensor other.

**Return type**

[CNOTDihedral](qiskit.ignis.verification.CNOTDihedral "qiskit.ignis.verification.CNOTDihedral")

### flip

<span id="qiskit.ignis.verification.CNOTDihedral.flip" />

`CNOTDihedral.flip(i)` [GitHub](https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.6/qiskit/ignis/verification/randomized_benchmarking/dihedral.py "view source code")

Apply X to this element. Left multiply the element by X\_i.

### from\_circuit

<span id="qiskit.ignis.verification.CNOTDihedral.from_circuit" />

`CNOTDihedral.from_circuit(circuit)` [GitHub](https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.6/qiskit/ignis/verification/randomized_benchmarking/dihedral.py "view source code")

Initialize from a QuantumCircuit or Instruction.

**Parameters**

**circuit** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *or*[*Instruction*](qiskit.circuit.Instruction "qiskit.circuit.Instruction")) – instruction to initialize.

**Returns**

the CNOTDihedral object for the circuit.

**Return type**

[CNOTDihedral](qiskit.ignis.verification.CNOTDihedral "qiskit.ignis.verification.CNOTDihedral")

**Raises**

**QiskitError** – if the input instruction is not CNOTDihedral or contains classical register instruction.

### input\_dims

<span id="qiskit.ignis.verification.CNOTDihedral.input_dims" />

`CNOTDihedral.input_dims(qargs=None)`

Return tuple of input dimension for specified subsystems.

### is\_cnotdihedral

<span id="qiskit.ignis.verification.CNOTDihedral.is_cnotdihedral" />

`CNOTDihedral.is_cnotdihedral()` [GitHub](https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.6/qiskit/ignis/verification/randomized_benchmarking/dihedral.py "view source code")

Return True if input is a CNOTDihedral element.

### output\_dims

<span id="qiskit.ignis.verification.CNOTDihedral.output_dims" />

`CNOTDihedral.output_dims(qargs=None)`

Return tuple of output dimension for specified subsystems.

### phase

<span id="qiskit.ignis.verification.CNOTDihedral.phase" />

`CNOTDihedral.phase(k, i)` [GitHub](https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.6/qiskit/ignis/verification/randomized_benchmarking/dihedral.py "view source code")

Apply an k-th power of T to this element. Left multiply the element by T\_i^k.

### power

<span id="qiskit.ignis.verification.CNOTDihedral.power" />

`CNOTDihedral.power(n)`

Return the compose of a operator with itself n times.

**Parameters**

**n** (*int*) – the number of times to compose with self (n>0).

**Returns**

the n-times composed operator.

**Return type**

[Pauli](qiskit.quantum_info.Pauli "qiskit.quantum_info.Pauli")

**Raises**

**QiskitError** – if the input and output dimensions of the operator are not equal, or the power is not a positive integer.

### reshape

<span id="qiskit.ignis.verification.CNOTDihedral.reshape" />

`CNOTDihedral.reshape(input_dims=None, output_dims=None, num_qubits=None)`

Return a shallow copy with reshaped input and output subsystem dimensions.

**Parameters**

*   **input\_dims** (*None or tuple*) – new subsystem input dimensions. If None the original input dims will be preserved \[Default: None].
*   **output\_dims** (*None or tuple*) – new subsystem output dimensions. If None the original output dims will be preserved \[Default: None].
*   **num\_qubits** (*None or int*) – reshape to an N-qubit operator \[Default: None].

**Returns**

returns self with reshaped input and output dimensions.

**Return type**

BaseOperator

**Raises**

**QiskitError** – if combined size of all subsystem input dimension or subsystem output dimensions is not constant.

### tensor

<span id="qiskit.ignis.verification.CNOTDihedral.tensor" />

`CNOTDihedral.tensor(other)` [GitHub](https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.6/qiskit/ignis/verification/randomized_benchmarking/dihedral.py "view source code")

Return the tensor product operator: self tensor other.

**Parameters**

**other** ([*CNOTDihedral*](qiskit.ignis.verification.CNOTDihedral "qiskit.ignis.verification.CNOTDihedral")) – an operator subclass object.

**Returns**

the tensor product operator: self tensor other.

**Return type**

[CNOTDihedral](qiskit.ignis.verification.CNOTDihedral "qiskit.ignis.verification.CNOTDihedral")

### to\_circuit

<span id="qiskit.ignis.verification.CNOTDihedral.to_circuit" />

`CNOTDihedral.to_circuit()` [GitHub](https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.6/qiskit/ignis/verification/randomized_benchmarking/dihedral.py "view source code")

Return a QuantumCircuit implementing the CNOT-Dihedral element.

**Returns**

a circuit implementation of the CNOTDihedral object.

**Return type**

[QuantumCircuit](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")

#### Remark:

Decompose 1 and 2-qubit CNOTDihedral elements.

**References**

1.  Shelly Garion and Andrew W. Cross, *On the structure of the CNOT-Dihedral group*, [arXiv:2006.12042 \[quant-ph\]](https://arxiv.org/abs/2006.12042)
2.  Andrew W. Cross, Easwar Magesan, Lev S. Bishop, John A. Smolin and Jay M. Gambetta, *Scalable randomised benchmarking of non-Clifford gates*, npj Quantum Inf 2, 16012 (2016).

### to\_instruction

<span id="qiskit.ignis.verification.CNOTDihedral.to_instruction" />

`CNOTDihedral.to_instruction()` [GitHub](https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.6/qiskit/ignis/verification/randomized_benchmarking/dihedral.py "view source code")

Return a Gate instruction implementing the CNOTDihedral object.

### to\_matrix

<span id="qiskit.ignis.verification.CNOTDihedral.to_matrix" />

`CNOTDihedral.to_matrix()` [GitHub](https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.6/qiskit/ignis/verification/randomized_benchmarking/dihedral.py "view source code")

Convert operator to Numpy matrix.

### to\_operator

<span id="qiskit.ignis.verification.CNOTDihedral.to_operator" />

`CNOTDihedral.to_operator()` [GitHub](https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.6/qiskit/ignis/verification/randomized_benchmarking/dihedral.py "view source code")

Convert to an Operator object.

### transpose

<span id="qiskit.ignis.verification.CNOTDihedral.transpose" />

`CNOTDihedral.transpose()` [GitHub](https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.6/qiskit/ignis/verification/randomized_benchmarking/dihedral.py "view source code")

Return the transpose of the CNOT-Dihedral element.

## Attributes

<span id="qiskit.ignis.verification.CNOTDihedral.dim" />

### dim

Return tuple (input\_shape, output\_shape).

<span id="qiskit.ignis.verification.CNOTDihedral.key" />

### key

Return a string representation of a CNOT-dihedral object.

<span id="qiskit.ignis.verification.CNOTDihedral.num_qubits" />

### num\_qubits

Return the number of qubits if a N-qubit operator or None otherwise.

<span id="qiskit.ignis.verification.CNOTDihedral.qargs" />

### qargs

Return the qargs for the operator.

<span id="qiskit.ignis.verification.CNOTDihedral.settings" />

### settings

Return operator settings.

